<resources>
    <string name="Unpriced">unpriced</string>
    <string name="Product_Unit"> No ctn for the product</string>
    <string name="Save">Save</string>
    <string name="shippingAddress">ShippingAddress</string>
    <string name="suc_to_update">Modified Successfully!</string>
    <string name="supply">supplier</string>
    <string name="Buy_KG">Buy </string>
    <string name="available">Available</string>
    <string name="login">login</string>
    <string name="chooseAddress">Choose Address</string>
    <string name="addAddress">Add Address</string>
    <string name="editAddress">Edit Address</string>
    <string name="save">Save</string>
    <string name="shippingAddressInfo">Shipping Address Info</string>
    <string name="please">please input shipping address</string>
    <string name="notEmpty">Address cannot be empty</string>
    <string name="billingAddress">Billing Address</string>
    <string name="oldAddress">Unable to delete the default address, please choose to modify</string>
    <string name="choose">please choose</string>
    <string name="delete">delete</string>
    <string name="edit2">edit</string>
    <string name="supplyProduce">Supply Produce:</string>
    <string name="resFriend">Cooperation:</string>
    <string name="kg">kg</string>
    <string name="ctn">ctn</string>
    <string name="pkt">pkt</string>
    <string name="pcs">pcs</string>
    <string name="language">language</string>
    <string name="language_set">Language Settings</string>
    <string name="LookingCoop">Looking forward to cooperating with you</string>
    <string name="english">English</string>
    <string name="clear_cart">Please empty the shopping cart</string>
    <string name="yes1">Yes</string>
    <string name="no1">No</string>
    <string name="hostSelect">Please pick up something~</string>
    <string name="gotoSee">Go to see~</string>
    <string name="unedit">Order is in distribution, can not be modified</string>
    <string name="Ctn_Dis">Enjoy </string>
    <string name="Ctn_count">discount by CTN, loss might happen by CTN</string>
    <string name="defineAddress">Set to the default address</string>
    <string name="please_connect">For business cooperation,please contact</string>
    <string name="send_email">Email</string>
    <string name="wawa_intro">WaWa Technology is a one-stop mobile-application-development based IT company. We primarily offer IT Solutions to enterprises in F &amp; B industry and Food Supply Chain to help them improve operation efficiency and customer satisfaction as well as optimize resources allocation. We are keen to build long-term relationship with clients by delivering customized services and tangible results at every phase.  Aiming to develop an eco-friendly business, we work on creating a paperless society with our IT products</string>
    <string name="view_supplier_product">View the supplier\'s products</string>
</resources>