<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee">
    <RelativeLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#ff0000">
        <ImageView
            android:id="@+id/turn_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/xiangzuo"/>
        <TextView
            android:gravity="center"
            android:layout_toRightOf="@+id/turn_left"
            android:paddingLeft="120dp"
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#fff"
            android:text="@string/editAddress"/>
        <TextView
            android:id="@+id/save"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#fff"
            android:text="@string/save"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/addAddress"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shippingAddressInfo"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/shippingAddress"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#fff"
        android:hint="@string/please"/>
</LinearLayout>