<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:background="@drawable/bg2">
            <ImageView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/turn_left"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ct"/>
            <RelativeLayout
                android:layout_marginTop="50dp"
                android:layout_marginLeft="13dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.samiapps.kv.myapplication.CircleImageView
                    android:id="@+id/head"
                    android:layout_marginLeft="8dp"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/logo"/>
                <LinearLayout
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/head"
                    android:layout_marginLeft="8dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:text="诚信供应商"/>
                    <TextView
                        android:id="@+id/produce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textColor="#62ffffff"
                        android:textSize="14sp"
                        android:text="主营蔬菜类，海鲜类批发"/>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="#EEE"/>
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:gravity="center_vertical"
            android:background="#fff">
            <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/tel"
                android:layout_marginLeft="5dp"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/dh2"/>
            <TextView
                android:layout_centerVertical="true"
                android:id="@+id/supplyTel"
                android:layout_toRightOf="@+id/tel"
                android:layout_marginLeft="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="12sp"
                android:text="商家电话:123456"/>
            <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/phone"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/dh24"/>
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#eee"/>
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:gravity="center_vertical"
            android:background="#fff">
            <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/local"
                android:layout_marginLeft="5dp"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/dz2"/>
            <TextView
                android:layout_centerVertical="true"
                android:id="@+id/supplyAddress"
                android:layout_toRightOf="@+id/local"
                android:layout_marginLeft="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="12sp"
                android:text="商家地址:xxx"/>
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="#eee"/>
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:paddingRight="5dp"
            android:gravity="center_vertical"
            android:background="#fff">
            <ImageView
                android:id="@+id/js"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="5dp"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/js2"/>
            <LinearLayout
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/js"
                android:orientation="vertical"
                android:layout_marginLeft="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="12sp"
                    android:text="@string/supplyProduce"/>
                <TextView
                    android:id="@+id/supplyIntroduce"
                    android:layout_marginTop="2dp"
                    android:textSize="11sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="十年之前，我们是朋友，还可以问候，只是那种温柔，找不到拥抱的理由，情人难免会沦为朋友"/>
            </LinearLayout>
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="#eee"/>
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:paddingRight="5dp"
            android:gravity="center_vertical"
            android:background="#fff">
            <ImageView
                android:id="@+id/ct"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="5dp"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ct2"/>
            <LinearLayout
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/ct"
                android:orientation="vertical"
                android:layout_marginLeft="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="12sp"
                    android:text="@string/resFriend"/>
                <TextView
                    android:id="@+id/resFriend"
                    android:text="@string/LookingCoop"
                    android:textSize="11sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/look"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#d32f2f"
        android:background="#fff"
        android:textSize="14sp"
        android:text="@string/view_supplier_product"/>
</RelativeLayout>